--- a/l5/style.css
+++ b/l5/style.css
@@ -69,15 +69,19 @@
   #information h2 {
     text-align: center;
   }
-  
   table,
-  td {
-    padding: 20px;
-    border-collapse: collapse;
-    border: 1px solid black;
-    text-align: center;
-  }
-  
-  #colorCodes {
-    width: 321px;
-  }
+tr,
+td {
+border: 2px solid #c2c2c2;
+}
+table {
+border-collapse: collapse;
+background-color: #fff;
+}
+td {
+width: 60px;
+height: 60px;
+vertical-align: middle;
+text-align: center;
+transition: background-color 0.2s ease;
+}
